@@ -95,8 +95,11 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+
 test {
 	finalizedBy jacocoTestReport // report is always generated after tests run
+	jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
 }
 
 jacocoTestReport {
